--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -75,7 +75,7 @@
                             <button class="update-link btns btn-sm" type="submit">Update</button>
                         </div>
                         <div class="col-3 ml-0 text-center">
-                            <button class="remove-item btns btn-sm" id="remove_{{ item.item_id }}">Remove</button>
+                            <a class="remove-item btns btn-sm" id="remove_{{ item.item_id }}">Remove</a>
                         </div>
                     </div>
                 </div>
@@ -141,5 +141,6 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+{% include 'cart/includes/remove_item_script.html' %}
 
 {% endblock %}
