--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -12,7 +12,7 @@
                         <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                     </a>
                     {% else %}
-                    <a href="">
+                    <a href="#">
                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                     </a>
                     {% endif %}
@@ -75,14 +75,13 @@
                     <form class="form" action="{% url 'add_to_favorites' product.id %}" method="POST">
                         {% csrf_token %}
                         <input type="hidden" data-item_id="{{ product.id }}">
-                        {% if on_favorites %}
-                            <button type="submit">Remove from favorites</button>
+                        {% if favorite in favorites %}
+                            <button type="submit"><i class="fas fa-heart fa-lg"></i></button>
                         {% else %}
-                            <button type="submit">Add to favorites</button>
+                            <button type="submit"><i class="far fa-heart fa-lg"></i></button>
                         {% endif %}
                     </form>
                     {% endif %}
-                    <!-- <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div> -->
                 </div>
             </div>
         </div>
