--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -85,57 +85,56 @@
             <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
         </div>
     </div>
+    <hr>
+    {% endfor %}
+    <div class="row">
+        <div class="col-6 col-md-2 offset-md-6 text-center delivery-link">
+            <a href="">
+                <h6>See our delivery policy</h6>
+            </a>
+        </div>
+        <div class="col-6 col-md-2 text-center">
+            <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+        </div>
+        <div class="col-6 offset-3 col-md-2 text-center">
+            <h6><strong>Sub total: £{{ sub_total|floatformat:2 }}</strong></h6>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 offset-3 col-md-4 offset-md-8 text-center">
+            <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-5 offset-md-7 mt-3 pb-3 checkout-btns">
+            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg keep-shopping">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
+            <a href="{% url 'checkout' %}" class="btns">
+                <span class="text-uppercase">Secure Checkout</span>
+                <span class="icon">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col text-center">
+            {% else %}
+            <p class="lead mb-5 text-center">Your cart is empty.</p>
+            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg text-center">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
+            {% endif %}
+        </div>
+    </div>
 </div>
-<hr>
-{% endfor %}
-<div class="row">
-    <div class="col-6 col-md-2 offset-md-6 text-center delivery-link">
-        <a href="">
-            <h6>See our delivery policy</h6>
-        </a>
-    </div>
-    <div class="col-6 col-md-2 text-center">
-        <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-    </div>
-    <div class="col-6 col-md-2 text-center">
-        <h6><strong>Sub total: £{{ sub_total|floatformat:2 }}</strong></h6>
-    </div>
-</div>
-<div class="row">
-    <div class="col-6 offset-6 col-md-4 offset-md-8 text-center">
-        <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
-    </div>
-</div>
-<div class="row">
-    <div class="col-12 col-md-5 offset-md-7 mt-3">
-        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-            <span class="icon">
-                <i class="fas fa-chevron-left"></i>
-            </span>
-            <span class="text-uppercase">Keep Shopping</span>
-        </a>
-        <a href="{% url 'checkout' %}" class="btns">
-            <span class="text-uppercase">Secure Checkout</span>
-            <span class="icon">
-                <i class="fas fa-lock"></i>
-            </span>
-        </a>
-    </div>
-</div>
-<div class="row">
-    <div class="col text-center">
-        {% else %}
-        <p class="lead mb-5 text-center">Your cart is empty.</p>
-        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg text-center">
-            <span class="icon">
-                <i class="fas fa-chevron-left"></i>
-            </span>
-            <span class="text-uppercase">Keep Shopping</span>
-        </a>
-        {% endif %}
-    </div>
-</div>
-
 {% endblock %}
 
 {% block postloadjs %}
