--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,18 +33,18 @@ nav a {
 
 /* The hero image */
 .hero-image {
-  background-image: url("/media/main.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  max-height: 100%;
+    background-image: url("/media/main.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    max-height: 100%;
 }
 
 .hero-text {
-  position: absolute;
-  top: 40%;
-  color: white;
+    position: absolute;
+    top: 40%;
+    color: white;
 }
 
 .hero-title {
@@ -91,18 +91,18 @@ nav a {
 
 /* Button styling  */
 .btns {
-color: #ffffff !important;
-background: #000000;
-padding: 10px;
-display: inline-block;
-transition: all 0.3s ease 0s;
-font-size: 15px;
+    color: #ffffff !important;
+    background: #000000;
+    padding: 10px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    font-size: 15px;
 }
 
 .btns:hover {
-border-radius: 50px;
-transition: all 0.3s ease 0s;
-text-decoration: none;
+    border-radius: 50px;
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
 }
 
 .up-btn {
@@ -124,13 +124,13 @@ text-decoration: none;
     padding: 8px;
 }
 
-.help-btn-style{
+.help-btn-style {
     background-color: #d36060;
 }
 
 .footer-style {
     position: relative;
-    padding:0px 20px;
+    padding: 0px 20px;
     background-color: #ebe9e9;
 }
 
@@ -159,10 +159,10 @@ text-decoration: none;
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -233,95 +233,102 @@ text-decoration: none;
 /* Tablet view */
 @media (max-width: 1030px) {
 
-/* navbar links */
-nav a {
-    font-size: 12px;
-}
+    /* navbar links */
+    nav a {
+        font-size: 12px;
+    }
 
-/* Sizes logo */
-.logo-image {
-    width: 100px;
-}
+    /* Sizes logo */
+    .logo-image {
+        width: 100px;
+    }
 
-.hero-text {
-  top: 40%;
-}
+    .hero-text {
+        top: 40%;
+    }
 
-.hero-title {
-    font-size: 35px;
-}
+    .hero-title {
+        font-size: 35px;
+    }
 
-.logo-image {
-    width: 120px;
-}
+    .logo-image {
+        width: 120px;
+    }
 
-.home-nav-padding {
-    padding-top: 90px;
-}
+    .home-nav-padding {
+        padding-top: 90px;
+    }
 
-.product-box {
-    padding: 20px 30px;
-}
+    .product-box {
+        padding: 20px 30px;
+    }
 
-.social-icons {
-    padding-left: 10px;
-}
+    .social-icons {
+        padding-left: 10px;
+    }
 
 }
 
 /* Mobile view */
 @media (max-width: 500px) {
 
-/* Sizes logo */
-.logo-image {
-    width: 70px;
-}
+    /* Sizes logo */
+    .logo-image {
+        width: 70px;
+    }
 
-.hero-text {
-  top: 30%;
-}
+    .hero-text {
+        top: 30%;
+    }
 
-.hero-button {
-    font-size: 8px;
-}
+    .hero-button {
+        font-size: 8px;
+    }
 
-.hero-title {
-    font-size: 22px;
-}
+    .hero-title {
+        font-size: 22px;
+    }
 
-.refresh {
-    font-size: 12px;
-}
+    .refresh {
+        font-size: 12px;
+    }
 
-.logo-image {
-    width: 120px;
-}
+    .logo-image {
+        width: 120px;
+    }
 
-.home-nav-padding {
-    padding-top: 95px;
-}
+    .home-nav-padding {
+        padding-top: 95px;
+    }
 
-.social-icons {
-    font-size: 40px;
-    padding-left: 5px;
-}
+    .social-icons {
+        font-size: 40px;
+        padding-left: 5px;
+    }
 
-.help-btn-style{
-    font-size: 10px;
-}
+    .help-btn-style {
+        font-size: 10px;
+    }
+
+    .keep-shopping {
+        padding-bottom: 10px;
+    }
+
+    .checkout-btns {
+        text-align: center;
+    }
 }
 
 
 @media (max-width: 285px) {
-/* Galaxy fold view */
+    /* Galaxy fold view */
 
-.social-icons {
-    font-size: 30px;
+    .social-icons {
+        font-size: 30px;
+    }
+
+    .help-btn-style {
+        font-size: 8px;
+    }
+
 }
-
-.help-btn-style{
-    font-size: 8px;
-}
-
-}
-
